Fix an assert when undoing merging of locked layers

BUG:497389